Summary: Complete single node and screenshots
Changesets:
- Added nomad plan and run commands to show what will happen
- Added full java command which will be run to execute the single node ElasticSearch
- Added screenshots to show Consul service status and Nomad deployment status
- Added screenshots for Cluster Health and ES Endpoint checks
- Added the memory Gotcha